--- a/css/sass/_gride.scss
+++ b/css/sass/_gride.scss
@@ -29,12 +29,12 @@ body{
 	}
 }
 .table{
-	display: table;
+	display: flex;
+    justify-content: center;
+    align-items: center;
 	height: 100%;
 }
-.table-row{
-	display: table-row;
-}
+
 .text-center{
 	text-align: center;
 }
